unpackaged/main/default/objects/Resource_Category__c/Resource_Category__c.object-meta.xml
<CustomObject>
    <description>A category (or subcategory) in the Nexus Resource Center. Top-level categories (Parent_Category__c = null) appear on the landing page; children are subcategories. Slug__c drives URL-friendly routing. Read by ResourceCenterService.</description>
    <label>Resource Category</label>
    <nameField>
        <label>Resource Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>