unpackaged/main/default/objects/Resource_Category__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <description>Level in the category tree (1 = top-level), maintained by ResourceCategoryTreeHandler — never edit by hand. The tree is capped at Resource_Center_Setting__mdt.Default.Max_Category_Depth__c (default 5); the trigger rejects saves that would exceed it.</description>
    <label>Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>