unpackaged/main/default/objects/Resource_Category__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Shown on the category tile.</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>