unpackaged/main/default/objects/Resource_Category__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Sort order within its level (ascending).</description>
    <label>Display Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>