unpackaged/main/default/objects/Resource_Category__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>Icon key from the rcIcons LWC module (e.g. megaphone) — picked visually in the Admin Console category editor. Unknown values fall back to a generic icon.</description>
    <label>Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>