unpackaged/main/default/objects/Resource_Category__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Soft hide without deleting. Inactive categories are excluded from the Resource Center.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>