unpackaged/main/default/objects/Resource_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent category. Null = a top-level category shown on the Resource Center landing page.</description>
    <label>Parent Category</label>
    <referenceTo>Resource_Category__c</referenceTo>
    <relationshipLabel>Subcategories</relationshipLabel>
    <relationshipName>Subcategories</relationshipName>
    <type>Lookup</type>
</CustomField>