unpackaged/main/default/objects/Resource_Category__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Materialized ancestor path, maintained by ResourceCategoryTreeHandler — never edit by hand. &quot;/&quot; for a top-level category, &quot;/&lt;rootId&gt;/&lt;parentId&gt;/&quot; for a grandchild. Descendants of a category X are the rows whose Path__c starts with X.Path__c + X.Id + &quot;/&quot;. Recomputed on every save; scripts/apex/backfillCategoryPaths.apex repairs it in bulk.</description>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>