unpackaged/main/default/objects/Resource_Category__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <description>URL-friendly unique identifier, e.g. &quot;marketing&quot;. Drives /resources/:categorySlug routing and is the external Id for data loads.</description>
    <externalId>true</externalId>
    <label>Slug</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>